package at.technikum.mtcg.models;

public class Card {
}
