package at.technikum.mtcg.models;

public class Package {
}
